--- a/ticket.html
+++ b/ticket.html
@@ -51,6 +51,7 @@
 
       <button type="submit">Formu Gönder</button>
     </form>
+    <form method="POST" action="https://formcarry.com/s/XXX" redirect="thankyou.html"></form>
   </div>
 </section>
 
